-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.2, 5.5.0 Alpha
-
-
f85b6c246172c1d8998b592612fcaae43878a5c0
Steps to reproduce:
1. Run the attached test application
2. Change font to Osaka and typeface to Regular-Mono
3. Osaka is selected but the typeface selection is ignored so Regular is always selected instead of Regular-Mono.
- relates to
-
QTBUG-38628 support font display name for QFont
-
- Open
-
- resulted from
-
QTCREATORBUG-13083 OS X: Setting font-family to Osaka and Typeface to Regular-Mono doesn't work in Designer
-
- Closed
-
| For Gerrit Dashboard: QTBUG-41487 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 108327,3 | Get CoreText style name when resolving Qt font | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |