Get CoreText style name when resolving Qt font

Since we use CoreText API to populate the font DB, we
should also make sure we use consistent data when doing
queries.

This partially reverts and ameds b619c35d8507eee.

Change-Id: I6a3470fbee719ae1ea3085c252a4870040b9af1a
Task-number: QTBUG-41487
Reviewed-by: Liang Qi <liang.qi@theqtcompany.com>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@theqtcompany.com>